solved the overflowing clipped part

--- a/service.css
+++ b/service.css
@@ -45,6 +45,7 @@ h1 {
     height: 25rem;
     perspective: 500px;
     padding: 1rem;
+    border-radius: 20px 0;
 }
 
 
@@ -55,6 +56,7 @@ h1 {
     transition: transform 1500ms;
     transform-style: preserve-3d;
     border-color: transparent;
+    border-radius: 20px 0;
     
 }
 
@@ -73,6 +75,7 @@ h1 {
     height: 100%;
     width: 100%;
     box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: flex;
     justify-content: center;
